# repo-sanitizer

./: .gitignore  README.md  batch_state.json  partner-batch-guide.md  pyproject.toml  repos.example.txt
docs/: 01-overview.md  02-data-model.md  03-pipeline.md  04-detection.md  05-extraction.md  06-redaction.md  07-configuration.md  08-batch-processing.md  09-security-properties.md  architecture.md  batch.md  offline.md  pipeline.md  rulepack-authoring.md
examples/: batch.yaml
examples/rules/: extractors.yaml  policies.yaml
examples/rules/dict/: clients.txt  codenames.txt  domains.txt  keep.txt  orgs.txt
examples/rules/regex/: pii_patterns.yaml
notebooks/: ner_playground.ipynb
repo_sanitizer/: buildsafe.py  cli.py  context.py  encoding.py  pipeline.py  rulepack.py  rules  variants.py
repo_sanitizer/batch/: config.py  gitlab_client.py  local.py  ner_service.py  orchestrator.py  worker.py
repo_sanitizer/detectors/: base.py  brand_structural.py  dictionary.py  endpoint.py  legal_id.py  ner.py  ner_natasha.py  regex_pii.py  secrets.py
repo_sanitizer/extractors/: fallback.py  treesitter.py
repo_sanitizer/redaction/: applier.py  git_identity.py  history_ops.py  replacements.py
repo_sanitizer/steps/: _git_utils.py  fetch.py  gate.py  history_blob_scan.py  history_rewrite.py  history_scan.py  inventory.py  package.py  redact.py  ref_reconcile.py  scan.py
runner_configs/: batch_state.json  filter_repos.py  repo_to_analyze.txt
runner_configs/mac_0/: batch.yaml  batch_state.json
runner_configs/mac_0/rules/dict/: clients.txt
runner_configs/mac_1/: batch.yaml  batch_state.json
runner_configs/mac_1/rules/: policies.yaml
runner_configs/mac_2/: batch.yaml  batch_state.json
runner_configs/mac_2/rules/: extractors.yaml
runner_configs/server/: batch.yaml  batch_state.json
runner_configs/server/rules/: policies.yaml
scripts/: run-batch.sh
tests/: conftest.py  test_apply_map.py  test_batch_config.py  test_batch_worker.py  test_build_detectors_scope.py  test_buildsafe.py  test_cli_batch.py  test_cp1251_commit_message.py  test_detectors.py  test_encoding.py  test_extractors.py  test_fetch.py  test_fetch_bundle_diagnostics.py  test_gate.py  test_history_ops.py  test_inventory.py  test_legal_id.py  test_local_batch.py  test_ner.py  test_ner_natasha.py  test_package.py  test_pipeline_history.py  test_pipeline_snapshot.py  test_redaction.py  test_ref_reconcile.py  test_rulepack.py  test_secrets_detector.py  test_secrets_prescan.py  test_variants.py
tests/fixtures/: create_brand_history_repo.sh  create_buildfiles_repo.sh  create_history_repo.sh  create_multibranch_repo.sh
tests/fixtures/sample_repo/: .mailmap  CODEOWNERS  README.md  config.prod.yaml  settings.py.example
(+4 files in other folders)
