[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-sanitizer"
version = "0.1.0"
description = "CLI utility for anonymizing Git repositories"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "pyahocorasick>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "transformers>=4.30",
    "torch>=2.0",
    "git-filter-repo>=2.38",
]

[project.scripts]
repo-sanitizer = "repo_sanitizer.cli:app_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[tool.setuptools.packages.find]
include = ["repo_sanitizer*"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
