[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-sanitizer"
version = "0.1.0"
description = "CLI utility for anonymizing Git repositories"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "pyahocorasick>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    # PHP is the dominant language in the GitLab repos we batch-sanitize; ship its
    # standalone grammar so .php files take the ABI-safe capsule path (a PyCapsule
    # re-wrapped by the locally installed tree_sitter) instead of the
    # tree-sitter-language-pack fallback, whose prebuilt ABI can diverge from the
    # installed tree-sitter and crash. No standalone tree-sitter-vue wheel exists
    # on PyPI, so .vue files still use the language-pack path (handled gracefully
    # by _get_parser's ABI guard → regex fallback when mismatched).
    "tree-sitter-php>=0.23",
    "transformers>=4.30",
    "torch>=2.0",
    "git-filter-repo>=2.38",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "protobuf>=7.34.0",
    # batch mode
    "python-gitlab>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tqdm>=4.66",
    "pip>=26.0.1",
    "gliner>=0.2.25",
]

[project.scripts]
repo-sanitizer = "repo_sanitizer.cli:app_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]
grammars = [
    "tree-sitter-language-pack",
]

[tool.setuptools.packages.find]
include = ["repo_sanitizer*"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
